# webapp-from-scratch

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: specification.md
scripts/postgres/: init-data.sh
