[tool.poetry]
name = "webapp-from-scratch"
version = "0.1.0"
description = ""
authors = ["myohei <yohei.maeda.11@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "webapp_from_scratch"}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.87.0"
sqlalchemy = ">=2.0.0b"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
flake8-isort = "^5.0.3"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[flake8]
max-line-length = 88
max-complexity = 20

[tool.black]
line-length = 88
include = '\.pyi?$'
